--- a/proyecto1/about.html
+++ b/proyecto1/about.html
@@ -6,48 +6,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
     <header>
-        <img src="./assets/LogoMightyducks-01.png" alt="Logo" style="width: 10%;">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./home.html">Home |</a>
-            <a href="./about.html">About MDHL |</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
+        <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">    
     </header>
 
     <main>
-        <article>
-            <h2>Mision</h2>
-            <p>
-                To support young athletes living Chicago's northside neighborhood, who have an interest in
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship
-            </p>
-        </article>
-        <article>
-            <h2>Vision</h2>
-            <p>
-                The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.
-            </p>
-        </article>
-        <article>
-            <h2>General Information</h2>
-            <p>
-                The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members.
-            </p>
-        </article>
+
+        <nav>
+            <a href="./index.html">Home </a>
+            <a href="#">About MDHL </a>
+            <a href="./contact.html">Contact</a>
+        </nav>
+
+        <section>
+            <h2>About MDHL</h2>
+            <div class="cuerpo-sec">
+                <article>
+                    <h3>Mision</h3>
+                    <p>
+                        To support young athletes living Chicago's northside neighborhood, who have an interest in
+                        learning and playing soccer, with opportunities to learn and practice skills related to the game of
+                        hockey, specifically those skills around team cooperation and good sportsmanship
+                    </p>
+                </article>
+                <article>
+                    <h3>Vision</h3>
+                    <p>
+                        The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                        through the building of character, self-discipline, and leadership.
+                    </p>
+                </article>
+                <article>
+                    <h3>General Information</h3>
+                    <p>
+                        The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                        Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+                        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                        parents and previous league members.
+                    </p>
+                </article>
+
+            </div>
+        
+
+
+        </section>
+
+        
 
         <figure>
-            <img src="./assets/hockey2.jpg" alt="Our League in action" style="width: 20%;">
+            <img src="./assets/hockey2.jpg" alt="Our League in action">
             <figcaption>Our League in action</figcaption>
         </figure>
 
