--- a/proyecto1/contact.html
+++ b/proyecto1/contact.html
@@ -6,28 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 
     <header>
-        <img src="./assets/LogoMightyducks-01.png" alt="Logo" style="width: 10%;">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./home.html">Home |</a>
-            <a href="./about.html">About MDHL |</a>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
+        <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">    
     </header>
     <main>
-        <!-- No puse nungún elemento semántico porque no hay un título que los identifique, y tanto section como article lo necesitan-->
-        <p>Please email us at <a href="#">mdhl@chihockey.org</a></p>
-        <p>We reply to your email as soon as we can</p>
 
-        <figure>
-            <img src="./assets/hockey3.jpg" alt="Our League in action" style="width: 20%;">
-            <figcaption>Our League in action</figcaption>
-        </figure>
+        <nav>
+            <a href="./index.html">Home </a>
+            <a href="./about.html">About MDHL </a>
+            <a href="#">Contact</a>
+        </nav>
+
+        <section>
+            <h2>Contact</h2>
+            <div class="cuerpo-sec">
+                <p>Please email us at <a href="#">mdhl@chihockey.org</a></p>
+                <p>We reply to your email as soon as we can</p>
+            </div>
+        
+
+            <figure>
+                <img src="./assets/hockey3.jpg" alt="Our League in action">
+                <figcaption>Our League in action</figcaption>
+            </figure>
+        </section>
 
     </main>
     <footer>
