--- a/proyecto1/contact.html
+++ b/proyecto1/contact.html
@@ -6,28 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
+    <link rel="icon" type="image/x-icon" href="./assets/stickHockey.png">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <nav>
+            <a href="./index.html">Home  </a>
+            <a href="./about.html">About MDHL  </a>
+            <a href="#" class="active">Contact</a>
+            <a href="./gameSchedule.html">Game Schedule</a>
+            <a href="./rules.html">Rules</a>
+        </nav>
         <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
-        <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">    
+        <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">
+        <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>    
     </header>
     <main>
-
-        <nav>
-            <a href="./index.html">Home </a>
-            <a href="./about.html">About MDHL </a>
-            <a href="#">Contact</a>
-        </nav>
 
         <section>
             <h2>Contact</h2>
             <div class="cuerpo-sec">
-                <p>Please email us at <a href="#">mdhl@chihockey.org</a></p>
+                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 <p>We reply to your email as soon as we can</p>
             </div>
         
@@ -40,7 +43,9 @@
 
     </main>
     <footer>
-        <p>Mighty Ducks 2023</p>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a>
     </footer>
 </body>
 
