agruegue form y mapas

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
     <link rel="icon" type="image/x-icon" href="./assets/stickHockey.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -20,6 +20,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./gameSchedule.html">Game Schedule</a>
             <a href="./rules.html">Rules</a>
+            <a href="./registration.html">Registration</a>
         </nav>
         <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
         <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">
