--- a/proyecto1/gameSchedule.html
+++ b/proyecto1/gameSchedule.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
     <link rel="icon" type="image/x-icon" href="./assets/stickHockey.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,15 +15,16 @@
 
     <header>
         <nav>
-            <a href="./index.html">Home  </a>
-            <a href="./about.html">About MDHL  </a>
+            <a href="./index.html">Home </a>
+            <a href="./about.html">About MDHL </a>
             <a href="./contact.html">Contact</a>
             <a href="#" class="active">Game Schedule</a>
             <a href="./rules.html">Rules</a>
+            <a href="./registration.html">Registration</a>
         </nav>
         <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
         <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">
-        <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>    
+        <h1>MIGHTY DUCKS HOCKEY LEAGUE</h1>
     </header>
     <main>
 
@@ -40,6 +41,8 @@
                         <th>Teams</th>
                         <th>Location</th>
                         <th>Times</th>
+                        <th>Map</th>
+
                     </tr>
 
                 </thead>
@@ -49,50 +52,103 @@
                         <td>U1 and U4</td>
                         <td>AJ Katzenmaier</td>
                         <td>9:30 a.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.657021229042!2d-87.63354870926116!3d41.900232705767124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1675792004728!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td>U3 and U2</td>
                         <td>Greenbay</td>
                         <td>1:00 p.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022795996982!2d-87.64002754945261!3d41.913868671052875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675792122542!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td rowspan="2">9/08</td>
                         <td>U5 and U6</td>
                         <td>Howard A Yeager</td>
                         <td>9:30 a.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766785725!2d-87.8560751494389!3d42.31544224580941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675792441795!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td>U6 and U1</td>
                         <td>Marjorie P Hart</td>
                         <td>1:00 p.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896536483436!2d-87.64816674945209!3d41.929626870065924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses!2sar!4v1675792567190!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td rowspan="2">9/15</td>
                         <td>U2 and U4</td>
                         <td>North</td>
                         <td>9:30 a.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.3353630187275!2d-87.64831694945286!3d41.907148871473645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses!2sar!4v1675792713297!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td>U3 and U5</td>
                         <td>AJ Katzenmaier</td>
                         <td>1:00 p.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.657021229042!2d-87.63354870926116!3d41.900232705767124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1675792004728!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                     <tr>
                         <td rowspan="2">9/22</td>
                         <td>U1 and U3</td>
                         <td>South</td>
                         <td>9:30 a.m.</td>
+                        <td>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2954.3863878883158!2d-88.34399504944189!3d42.22755755135035!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f6d4a6d2e1093%3A0xdea3c745e6bb6aa0!2sSouth%20Elementary%20School!5e0!3m2!1ses!2sar!4v1675792847729!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
                     </tr>
                     <tr>
                         <td>U2 and U6</td>
                         <td>Howard A Yeager</td>
                         <td>1:00 p.m.</td>
+                        <td> <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698766785725!2d-87.8560751494389!3d42.31544224580941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675792441795!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
                     </tr>
                     <tr>
                         <td>9/29</td>
                         <td>U4 and U5</td>
                         <td>Greenbay</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022795996982!2d-87.64002754945261!3d41.913868671052875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675792122542!5m2!1ses!2sar"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </td>
+
                     </tr>
                 </tbody>
             </table>
