--- a/proyecto1/rules.html
+++ b/proyecto1/rules.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Duks</title>
     <link rel="icon" type="image/x-icon" href="./assets/stickHockey.png">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -19,6 +19,7 @@
             <a href="./contact.html">Contact</a>
             <a href="./gameSchedule.html">Game Schedule</a>
             <a href="#" class="active">Rules</a>
+            <a href="./registration.html">Registration</a>
         </nav>
         <img class="cabecera" src="./assets/design1_image1.jpg" alt="imagen header">
         <img class="logo" src="./assets/logoMightyDucks-01.png" alt="Logo">
@@ -98,10 +99,13 @@
             <p>All-play means that every recreation player on every team shall play atleast
                 fifty percent of each game. Coaches in the competition program are encouraged
                 to play their players 50% of each game.
-                o A Coach shall be permitted to not play a player 50% of each game
+            <p>
+                A Coach shall be permitted to not play a player 50% of each game
                 under special circumstances, e.g., unexcused absences from practice
                 and/or games, ungentlemanly conduct at practice and/or games, and
-                injuries.</p>
+                injuries.
+            </p>
+
         </section>
 
 
